--- a/style.css
+++ b/style.css
@@ -3,6 +3,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Signika+Negative:wght@300..700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
 
 :root {
     --mainbgcol: #1E201E;
@@ -17,7 +21,9 @@
     --pfsize1: 16px;
     --pfsize2: 18px;
 }
-
+* {
+    user-select: none; /* Disable text selection */
+}
 body {
     padding: 0%;
     margin: 0%;
@@ -168,10 +174,15 @@ body {
     gap: 2.1rem;
 
 }
-.slider ul a {
+.slider ul div {
     text-decoration: none;
     color: var(--quaternarycol);
     text-wrap: nowrap;
+    display: inline-block;
+    cursor: -webkit-grab;
+}
+.slider ul div:active {
+    cursor: -webkit-grabbing;
 }
 #goleftbttn{
     position: absolute;
@@ -244,9 +255,10 @@ body {
     height: 35px;
     border: 3px solid var(--tertiarycol);
     color: var(--quaternarycol);
-    font-family: "Oswald";
+    font-family: "Inter";
     font-size: var(--pfsize1);
-    font-weight: bolder;
+    font-weight: 750;
+    background-color: var(--mainbgcol);
 
 }
 
